fix(search): trim whitespace in variable names
impr(search): show whitespace in variable value
chore(task meta): trim whitespace in assignee name

related to CAM-3136

--- a/webapps/client/scripts/tasklist/directives/cam-tasklist-search.less
+++ b/webapps/client/scripts/tasklist/directives/cam-tasklist-search.less
@@ -46,6 +46,10 @@
     [cam-widget-inline-field] {
       margin-top: -2px;
       margin-bottom: -2px;
+
+      .visible-whitespace {
+        white-space: pre-wrap;
+      }
     }
 
     .view-value,
